add spring config test